=========1.4.36b================
- Bugfix: option = 0/1 was translated incorrectly.
- Default node count is 1.
- EOF received from the engine should now be logged correctly (i.e. after the buffer is empty).
- Bugfix: Nasty buffer overflow in the macro CONSTRUCT_ARG_STRING.
- Bugfix: pipex_writeln (win32) was logging at the wrong spot. 
- Log board when an illegal move is received. 
=========1.4.35b================
- New WbWorkAround for silly bug in WB. Depth <=1 clears the engine output window. Why should an engine not be allowed to send info at depth one?
=========1.4.34b================
- Warning: this release is less well tested as usual
- Allow spaces around "=" in "option =" commands.
- WbWorkArounds is now true by default. It decapitalizes Draw when this appears in engine option. 
- Trying to set a non existent UCI option gives an error. 
- PG will now resign in case of an illegal engine move. 
- More code has been put in "pipex".
- info strings and unrecognized info lines are relayed to the GUI.
=========1.4.33b================
- New option: "WbWorkArounds" to work around bugs in WB. Currently it blocks options which contain "Draw" in their name from being sent to the GUI. Engines that have such options are Rybka and HIARCS. 
- Bugfix for ASSERT failure in bright. Now another ASSERT failure has appeared which seems to be bright's fault however. 
=========1.4.32b================
- Bugfix: the default setting for RepeatPV had become false again...
=========1.4.31b================
- Bugfix: improper handling of vararg function.
=========1.4.30b================
- Some more meaningful error messages added.
- Some buffer overflow checks added.
- Simplification of strange signal kludge in gui.c. 
- Removal of obsolete code in engine.c and gui.c. Platform specific code has been abstracted and pushed into pipex_win32.c and pipex_posix.c
- The format of the version number has changed once again. Debian was unhappy with the previous one.