@@ -1,3 +1,5 @@
+=========1.4.37b================
+- Two new options: BookDepth and BookTreshold. BookDepth limits the number of moves the book is used and BookTreshold sets the minimum weight a book move should have.
 =========1.4.36b================
 - Bugfix: option = 0/1 was translated incorrectly.
 - Default node count is 1.
